# api-message-sender

./: README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: message_sender.py
app/api/v1/endpoints/responses/: message_sender_response.py
app/api/v1/endpoints/router_config/: message_sender_config.py
app/core/: auth.py  configs.py
app/schemas/: message_schema.py
app/services/: message_sender_service.py  rabbitmq_publisher.py
